Fixed body padding on smaller devices

--- a/public/css/less/app.less
+++ b/public/css/less/app.less
@@ -223,6 +223,9 @@ footer {
 }
 // Drop down menu for small screens
 @media (max-width:769px) {
+	body {
+		padding-top:50px;
+	}
 	nav.navbar .menu {
 		display:block;
 		float:right;
